<resources>
    <string name="app_name">Salade Tomate Oignon</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="hint_email">Email</string>
    <string name="hint_password">Mot de passe</string>
    <string name="hint_firstname">Prénom</string>
    <string name="hint_lastname">Nom</string>
    <string name="hint_verify_password">Confirmer mot de passe</string>
    <string name="err_msg_email">Email invalide</string>
    <string name="err_msg_password">Veuillez saisir votre mot de passe</string>
    <string name="err_msg_first_name">Prénom invalide</string>
    <string name="err_msg_last_name">Nom invalide</string>
    <string name="err_msg_confirm_password">Les mots de passe ne correspondent pas</string>
    <string name="err_unknown_user">L\'utilisateur n\'est pas valide</string>
    <string name="err_bad_password">Le mot de passe n\'est pas correct</string>
    <string name="action_about">A propos</string>
    <string name="Cantinder_DetailRestaurant">Previous restaurant details</string>
    <string name="CantinderTest_Title">TACOS - Snack du campus</string>
    <string name="preference_file_key">com.hexabinome.saladetomateoignon</string>
    <string name="cheese_ipsum">Jarlsberg lancashire edam. Dolcelatte hard cheese brie st.</string>
    <string name="temps_attente">%dmn d\'attente**</string>
    <string name="temps_attente_moyen">%dmn d\'attente en moyenne</string>
    <string name="temps_attente_2">%dmn</string>
    <string name="prix_restaurant">%.2f €*</string>
    <string name="prix_restaurant_entier">%d €</string>
    <string name="distance_restaurant">%.2f mètres</string>
    <string name="distance_restaurant_entier">%d mètres</string>
    <string name="note_restaurant">%.1f/5</string>
    <string name="who_you_are">Vous êtes ? :</string>
    <string name="empty_restaurant"> "Il n'y a plus de restaurants avec ces preferences autour de vous ! Pensez à modifier vos preferences ! "</string>
    <string name="empty_favoris_list"> "  Vous n'avez pas de restautants favoris!"</string>
    <string name="google_app_id">AIzaSyDz63TC0pjEQTHr23m75IID2KLDhJvzZ18</string>
    <string name="add_comment">Laissez un avis</string>
    <string name="add_optional_comment">Laissez un avis (optionnel)</string>
    <string name="valider">Valider</string>
    <string name="annuler">Annuler</string>
    <string name="temps1">11h30 – 12h00</string>
    <string name="temps2">12h00 – 12h30</string>
    <string name="temps3">12h30 – 13h00</string>
    <string name="temps4">13h00 – 13h30</string>
    <string name="temps5">13h30 – 14h00</string>
    <string name="description_temps_moyen">**Temps moyen d\'attente entre 11h30 14h00.</string>
    <string name="gps_desactive">Votre GPS semble inactif, souhaitez vous l\'activer?. Pour bénéficier d\'une meilleure utilisation de l\'application, nous avons besoin de votre position.</string>
    <string name="description_application">Application développée dans le cadre d\'un projet au sein de l\'INSA de Lyon.</string>
    <string name="developpeurs">Développeurs :\n
        \t - Alexis Andra \n\t - Jolan Cornevin \n\t - Mohamed El Mouctar Haidara \n\t - Alexis Papin \n\t - Robin Royer \n\t - Maximilian Schiedermeier \n\t - David Wobrock
    </string>
    <string name="code_source">Code source : https://github.com/Hexabinome/salade_tomate_oignon</string>
    <string name="remarque">Pour toute remarque : mohamed.haidara@insa-lyon.fr</string>
    <string name="pref_description_note">Sélectionner une note sur 5 pour les points de restauration.</string>
    <string name="pref_description_regime">Sélectionner votre type de régime préféré.</string>
    <string name="pref_description_prix">Sélectionner le prix maximal pour un repas.</string>
    <string name="pref_description_temps">Sélectionner le temps d\'attente maximal.</string>
    <string name="pref_description_distance">Sélectionner la distance maximale pour la recherche.</string>
    <string name="action_deconnexion">Déconnexion</string>
    <string name="aide">Aide</string>
    <string name="connecte_en_tant_que">Connecté en tant que %s.</string>
    <string name="prix_par_type_utilisateur">*Prix pour un %s</string>
</resources>
