<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:orientation="vertical"
              android:padding="@dimen/activity_vertical_margin"
              android:layout_width="match_parent"
              android:layout_height="match_parent">

    <TextView
        android:textColor="@android:color/black"
        android:text="@string/description_application"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

    <TextView
        android:text="@string/developpeurs"
        android:layout_marginTop="15dp"
        android:textColor="@android:color/black"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

    <TextView
        android:id="@+id/code_source"
        android:textColor="@android:color/black"
        android:text="@string/code_source"
        android:layout_marginTop="15dp"
        android:autoLink="web"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

    <TextView
        android:textColor="@android:color/black"
        android:text="@string/remarque"
        android:autoLink="email"
        android:layout_marginTop="15dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

</LinearLayout>