<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin" tools:context=".SubscribeActivity"
    android:orientation="vertical"
    android:weightSum="1">

    <TextView android:text="Inscription" android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:textSize="50dp"
        android:textAlignment="center"
        android:textColor="@color/colorPrimary"/>

    <Space
        android:layout_width="fill_parent"
        android:layout_height="30dp" />

    <android.support.design.widget.TextInputLayout
        android:id="@+id/input_layout_firstname"
        android:layout_height="wrap_content"
        android:layout_width="match_parent">
        <EditText
            android:id="@+id/input_firstname"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:hint="@string/hint_firstname"/>
    </android.support.design.widget.TextInputLayout>

    <Space
        android:layout_width="fill_parent"
        android:layout_height="30dp" />

    <android.support.design.widget.TextInputLayout
        android:id="@+id/input_layout_lastname"
        android:layout_height="wrap_content"
        android:layout_width="match_parent">
        <EditText
            android:id="@+id/input_lastname"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:hint="@string/hint_lastname"/>
    </android.support.design.widget.TextInputLayout>

    <Space
        android:layout_width="fill_parent"
        android:layout_height="30dp" />

    <android.support.design.widget.TextInputLayout
        android:id="@+id/input_layout_email"
        android:layout_height="wrap_content"
        android:layout_width="match_parent">
        <EditText
            android:id="@+id/input_email"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:hint="@string/hint_email"/>
    </android.support.design.widget.TextInputLayout>

    <Space
        android:layout_width="fill_parent"
        android:layout_height="30dp" />

    <android.support.design.widget.TextInputLayout
        android:id="@+id/input_layout_password"
        android:layout_height="wrap_content"
        android:layout_width="match_parent">
        <EditText
            android:id="@+id/input_password"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:inputType="textPassword"
            android:hint="@string/hint_password"/>
    </android.support.design.widget.TextInputLayout>
    <Space
        android:layout_width="fill_parent"
        android:layout_height="30dp" />
    <android.support.design.widget.TextInputLayout
        android:id="@+id/input_layout_verify_password"
        android:layout_height="wrap_content"
        android:layout_width="match_parent">
        <EditText
            android:id="@+id/input_verify_password"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:inputType="textPassword"
            android:hint="@string/hint_verify_password"/>
    </android.support.design.widget.TextInputLayout>
    <Space
        android:layout_width="fill_parent"
        android:layout_height="30dp" />
    <Button
        android:text="Valider"
        android:id="@+id/validateButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />
</LinearLayout>